# discord-stories

./: .gitignore  Cargo.toml  stories.json  test.txt
apps/generateVideo/: .eslintrc  package-lock.json  package.json  remotion.config.ts  tsconfig.json
apps/generateVideo/hooks/: UseGenerateVoice.tsx
apps/generateVideo/public/temp_assets/: story.json  story_fragments.json  test.json
apps/generateVideo/public/video_1/: script.txt
apps/generateVideo/src/: Composition.tsx  Root.tsx  SpeakerMapper.ts  StoryMapper.ts  load-font.ts  webpack-override.ts
apps/generateVideo/src/CaptionedVideo/: NoCaptionFile.tsx  Subtitle.tsx  Word.tsx  index.tsx
apps/generateVideo/src/components/: ChatMessage.tsx  ChatMessageBanner.tsx  ChatMessageText.tsx  TitleBanner.tsx
apps/generateVideo/src/hooks/: Delayed.tsx  RandomPicture.tsx
src/: generate_story.rs  main.rs  write_duration.rs
src/adapters/: generate_audio.rs
src/adapters/audio/: generate_audio.rs  handle_generate_audio.rs
src/adapters/text/: generate_text.rs
src/adapters/video/: generate_video.rs
src/entities/: entities.rs
src/prompt_generation/: chat_prompt.rs  comments_prompt.rs  generate_prompt.rs  generate_schema.rs  narrator_prompt.rs  story_config.rs
src/prompt_generation/chat/: chat_model_training.rs  chat_to_llm.rs  generate_chat_prompt.rs
src/prompt_generation/comments/: comments_to_llm.rs  generate_comments_prompt.rs
src/prompt_generation/narrator/: generate_narrator_prompt.rs  narrator_model_training.rs  narrator_to_llm.rs
src/write_operations/: write_audio_duration.rs  write_voices.rs
(+6 files in other folders)
