[package]
name = "discord-stories"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lofty = "0.19.2"
reqwest =  { version = "0.12.4" , features = ["blocking", "json"] }
serde = {version= "1.0.198",  features = ["derive"] }
serde_json = "1.0.116"
tokio =   { version = "1.37.0" , features = ["full"] } 
